--- a/ann/ann.tex
+++ b/ann/ann.tex
@@ -218,17 +218,23 @@
 
 \begin{frame}{Introduction}{Structure of neurons (II)}
 	%\centering\includegraphics[width=0.7\linewidth]{figs/neuronabio.png}\\
-		A neuron has a cell body ...
-			\begin{itemize}
-			\item ... a branching input structure (dendrite) and 
-			\item ... a branching output structure (axon)
-			\end{itemize}
-		Axons connect to dendrites via \alert{synapses}
-		\smallskip
-		\begin{center}
-			\includegraphics[width=0.6\linewidth]{figs/neuron_anatomy.jpg}
-			\includegraphics[width=0.4\linewidth]{figs/sinapsis.jpg}
-		\end{center}
+	A neuron has a cell body ...
+		\begin{itemize}
+			\item ... a branching \textit{input} structure (dendrite) and 
+			\item ... a branching \textit{output} structure (axon)
+		\end{itemize}
+	Axons connect to dendrites via \alert{synapses}
+
+	\bigskip
+
+	\begin{columns}[c]
+	    \column{.1\textwidth}
+	    \column{.50\textwidth}
+			\includegraphics[width=\linewidth]{figs/neuron-bio.png}
+	    \column{.3\textwidth}
+			\includegraphics[width=\linewidth]{figs/sinapsis.jpg}
+	    \column{.1\textwidth}
+    \end{columns}
 \end{frame}
 
 \begin{frame}{Introduction}{Structure of neurons (III)}
@@ -780,6 +786,8 @@
     \begin{center}
 	    \includegraphics[width=0.9\linewidth]{figs/sep.png}
     \end{center}
+
+	\centering \href{https://github.com/dfbarrero/aiCourse/raw/master/ann/artificialNeuron.xlsx}{(A MLP in Excel)}
 \end{frame}
 
 \subsection{Bias in a MLP}
