--- a/ann/ann.tex
+++ b/ann/ann.tex
@@ -584,30 +584,29 @@
 \section{Artificial Neural Networks}
 \subsection{Definition}
 
-%\begin{frame}{Artificial Neural Networks}{Definition (I)}
+\begin{frame}{Artificial Neural Networks}{Definition (I)}
+    \begin{columns}
+	   \column{.80\textwidth}
+	\begin{itemize}
+	\item A very much simplified version of biological nerve systems
+	\item A set of nodes (neurons) 
+		\begin{itemize}
+		\item Each node has input and output
+		\item Each node performs a simple computation 
+		\end{itemize}
+	\item Weighted connections between nodes
+		\begin{itemize}
+		\item Connectivity gives the structure of the net
+		\item What can be computed by an ANN is primarily determined by the connections and their weights
+		\end{itemize}
+	\item It can \alert{recognize patterns}, \alert{learn} and \alert{generalize}
+	\end{itemize}
 
-%    \begin{columns}
-% 	   \column{.80\textwidth}
-%	\begin{itemize}
-%	\item A very much simplified version of biological nerve systems
-%	\item A set of nodes (neurons) 
-%		\begin{itemize}
-%		\item Each node has input and output
-%		\item Each node performs a simple computation 
-%		\end{itemize}
-%	\item Weighted connections between nodes
-%		\begin{itemize}
-%		\item Connectivity gives the structure of the net
-%		\item What can be computed by an ANN is primarily determined by the connections and their weights
-%		\end{itemize}
-%	\item It can \alert{recognize patterns}, \alert{learn} and \alert{generalize}
-%	\end{itemize}
-
- %	   \column{.40\textwidth}
-%	\includegraphics[width=\linewidth]{figs/network2.png}
-%	\tiny{\href{https://tex.stackexchange.com/questions/540287/tikz-randomly-drop-connections-in-neural-network}{(Source)}}
- %   \end{columns}
-%\end{frame}
+ 	   \column{.40\textwidth}
+	\includegraphics[width=\linewidth]{figs/network2.png}
+	\tiny{\href{https://tex.stackexchange.com/questions/540287/tikz-randomly-drop-connections-in-neural-network}{(Source)}}
+    \end{columns}
+\end{frame}
 
 \begin{frame}{Artificial Neural Networks}{Definition (II)}
 	ANN properties
