--- a/ann/ann.tex
+++ b/ann/ann.tex
@@ -512,6 +512,7 @@
 
 	   	\begin{itemize}
 		   \item Used in regression
+           \item Last layer in regression
 	   	\end{itemize}
  
  	   \column{.30\textwidth}
