--- a/ann/ann.tex
+++ b/ann/ann.tex
@@ -612,8 +612,8 @@
 \begin{frame}{Artificial Neural Networks}{Definition (II)}
 	ANN properties
 	\begin{itemize}
-	\item Noise tolerance
 	\item General function approximator
+	\item Noise tolerance
 	\end{itemize}
 
 	Machine Learning tasks
@@ -624,9 +624,11 @@
 
 	Many topologies
 	\begin{itemize}
-		\item Acyclic, recurrent (cyclic), modular, etc
 		\item Feed Forward networks (MLPs)
+		\item Recurrent, modular, etc
 	\end{itemize}
+
+    \bigskip
 
 	\centering \textit{Human readability less important than performance}
 \end{frame}
